--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'RC'
 - !lcsh 'Medicine, Popular'
+- GITenberg
 title: Papers on Health
 url: http://www.gutenberg.org/ebooks/21560
